--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
-    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+  "develop": "npm run build && concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+   
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
     "build": "cd client && npm run build"
   },
+
   "author": "",
   "license": "ISC",
   "devDependencies": {
