--- a/server/.env
+++ b/server/.env
@@ -4,3 +4,12 @@
 MONGODB_URI=mongodb://localhost:27017/petFinderDB
 
 JWT_SECRET=yty8bhuiwxcw65rxwi8wxcs8ycw
+
+TWILIO_ACCOUNT_SID=AC58d7b408f9c5eeba6365df862153325c
+
+TWILIO_AUTH_TOKEN=5c3effbd2047aec5bfd63e6c78827394
+
+TWILIO_PHONE_NUMBER=+18444711087
+
+MY_PHONE_NUMBER=+6124170269
+
