--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 
 
 # DATABASE
-MONGODB_URI=mongodb://localhost:27017/petFinderDB
+MONGODB_URI='mongodb+srv://billingwalters:mongoDBAtlas@cluster0.jxzdyag.mongodb.net/petFinderDBretryWrites=true&w=majority'
 
 JWT_SECRET=yty8bhuiwxcw65rxwi8wxcs8ycw
 
