--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "concurrently": "^5.3.0"
   },
   "dependencies": {
+    "@tensorflow-models/mobilenet": "^2.0.4",
+    "@tensorflow/tfjs": "^1.5.1",
     "axios": "^1.3.4",
     "cloudinary-react": "^1.8.1"
   }
