--- a/package.json
+++ b/package.json
@@ -16,9 +16,17 @@
     "concurrently": "^5.3.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.12",
     "@tensorflow-models/mobilenet": "^2.0.4",
     "@tensorflow/tfjs": "^1.5.1",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "axios": "^1.3.4",
     "cloudinary-react": "^1.8.1"
+  },
+  "volta": {
+    "node": "16.13.1"
   }
 }
