--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.12",
     "@tensorflow-models/mobilenet": "^2.0.4",
+    "@mui/material/Tabs": "^11.10.6",
+    "@mui/material/Tab": "^11.10.6",
+    "@mui/material/Box": "^11.10.6",
     "@tensorflow/tfjs": "^1.5.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
