--- a/client/package.json
+++ b/client/package.json
@@ -2,16 +2,12 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "options": {
-    "allowedHosts": [
-      "localhost",
-      ".localhost"
-    ],
-    "proxy": "http://localhost:3001/"
-  },
   "proxy": "http://localhost:3001",
   "dependencies": {
-   
+    "@tensorflow-models/mobilenet": "^2.0.4",
+    "@tensorflow/tfjs": "^1.5.1",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
