--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
-    "develop": "npm run build && concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
     "build": "cd client && npm run build"
@@ -14,13 +14,5 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.3.0"
-  },
-  "dependencies": {
-    "@tensorflow-models/mobilenet": "^2.0.4",
-    "@tensorflow/tfjs": "^1.5.1",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "axios": "^1.3.4",
-    "cloudinary-react": "^1.8.1"
   }
 }
